fix grouping spacing

--- a/src/css/ListBox.scss
+++ b/src/css/ListBox.scss
@@ -34,7 +34,7 @@ $list-item-padding: 20px;
     }
 }
 .expandable {
-    margin: 0 0 8px 0;
+    margin: 0 0 12px 0;
     padding: 0;
     display: flex;
     font-weight: bold;
@@ -45,6 +45,9 @@ $list-item-padding: 20px;
     .collapse, .expand {
         margin-right: 0.5em;
         height: 22px;
+    }
+    h3 {
+        margin: 0;
     }
 }
 .sidebox {
